--- a/index.html
+++ b/index.html
@@ -5587,7 +5587,7 @@
                     <div class='ladi-button'>
                         <div class="ladi-button-background"></div>
                         <div id="BUTTON_TEXT293" class='ladi-element ladi-button-headline'>
-                            <p class='ladi-headline'>ĐĂNG KÝ TƯ VẤN MIỄN PHÍ</p>
+                            <p class='ladi-headline'>ĐĂNG KÝ TƯ VẤN KHÓA HỌC</p>
                         </div>
                     </div>
                 </div>
